plugins {
    id 'java'
    id 'org.springframework.boot' version '4.0.6'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'ev_charger'
version = '0.0.1-SNAPSHOT'
description = 'be'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-webmvc'
    compileOnly 'org.projectlombok:lombok'
    // postgreSql
    runtimeOnly 'org.postgresql:postgresql'
    // lombok
    annotationProcessor 'org.projectlombok:lombok'
    testImplementation 'org.springframework.boot:spring-boot-starter-data-jpa-test'
    testImplementation 'org.springframework.boot:spring-boot-starter-webmvc-test'
    testCompileOnly 'org.projectlombok:lombok'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    testAnnotationProcessor 'org.projectlombok:lombok'
    testImplementation 'org.springframework.security:spring-security-test'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    // jwt
    implementation 'io.jsonwebtoken:jjwt-api:0.12.6'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.6'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.6'
    //spring security
    implementation 'org.springframework.boot:spring-boot-starter-security'
    // redis
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
    // google oauth
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
    // 뭔지 몰라서 일단 안지움
    implementation 'org.locationtech.jts:jts-core:1.19.0'
    // geography
    implementation 'org.hibernate.orm:hibernate-spatial:7.2.12.Final'
    implementation 'com.fasterxml.jackson.core:jackson-databind:2.17.2'
    // spring boot web 스타터
    implementation 'org.springframework.boot:spring-boot-starter-web'
    // FCM
    implementation 'com.google.firebase:firebase-admin:9.2.0'
    // 재시도(@Retryable)
    implementation 'org.springframework.retry:spring-retry:2.0.11'
    // 지워도 될 듯
    implementation 'org.aspectj:aspectjweaver:1.9.22'
    implementation 'org.springframework.boot:spring-boot-starter-aspectj'
}

tasks.named('test') {
    useJUnitPlatform()
}